--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "vueportable",
+  "homepage": "https://parksoha.github.io/vueinstagram/",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,6 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.7.4",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
